--- a/com/bridgelab/functional/.gitignore
+++ b/com/bridgelab/functional/.gitignore
@@ -9,3 +9,7 @@
 /PrimeFactor.class
 /SingletonScanner.class
 /StringReplace.class
+/EuclideanDistance.class
+/Distance.class
+/Permutation.class
+/Stopwatch.class
