--- a/com/bridgelab/algorithm/.gitignore
+++ b/com/bridgelab/algorithm/.gitignore
@@ -5,3 +5,7 @@
 /UtilityClass.class
 /WordList.class
 /Merge.class
+/isPrimeAnagram.class
+/PrimeAnagram.class
+/VendingMachine.class
+/TemperaturConversion.class
