--- a/com/bridgelab/functional/.gitignore
+++ b/com/bridgelab/functional/.gitignore
@@ -19,3 +19,7 @@
 /WindChill.class
 /CoupanGenerator.class
 /CouponGenrator.class
+/SumOfThree.class
+/VendingMachine.class
+/TemperaturConversion.class
+/ToBinary.class
