--- a/com/bridgelab/algorithm/.gitignore
+++ b/com/bridgelab/algorithm/.gitignore
@@ -9,3 +9,6 @@
 /PrimeAnagram.class
 /VendingMachine.class
 /TemperaturConversion.class
+/QuestionToFindNumber.class
+/ToBinary.class
+/ToSwapNibble.class
