--- a/com/bridgeLab/dataStructure/.gitignore
+++ b/com/bridgeLab/dataStructure/.gitignore
@@ -5,3 +5,8 @@
 /Sample.class
 /BalancedParentheses.class
 /Banking.class
+/PalindromeChecker.class
+/HashingSearch.class
+/IoFile.class
+/PrimeAnagram.class
+/Calendar.class
